--- a/src/overrides/Header.astro
+++ b/src/overrides/Header.astro
@@ -63,6 +63,7 @@ const shouldRenderSearch =
         developers: 'Developer Documentation',
         mainnet: 'Mainnet',
         musd: 'MUSD',
+        mats: 'mats',
         features: 'Features',
         resources: 'Resources',
         'getting-started': 'Getting Started',
